--- a/assign3/second.html
+++ b/assign3/second.html
@@ -1,3 +1,7 @@
+<!-- Name: Rohan Sah
+    File:Assignment-3
+    Date:2025/02/23
+    Description: Typesetting a community school homepage  -->
 <<!DOCTYPE html>
 <html lang="en-US">
   <head>
