--- a/Assignment 4/Assignment 4/Part 1- Assignment 4/index part1.html
+++ b/Assignment 4/Assignment 4/Part 1- Assignment 4/index part1.html
@@ -1,7 +1,7 @@
 <!-- Name: Rohan Sah
     File:Assignment 4
     Date:2025/04/05
-    Description:  -->
+    Description: silly story generator -->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
