--- a/Assignment 4/Assignment 4/Part 2 - Assignment 4/index part2.html
+++ b/Assignment 4/Assignment 4/Part 2 - Assignment 4/index part2.html
@@ -1,7 +1,7 @@
 <!-- Name: Rohan Sah
     File:Assignment 4
     Date:2025/04/05
-    Description:  -->
+    Description: Interactive Image Galley-->
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
