--- a/Assignment 4/Assignment 4/Part 3- Assignment 4/index part3.html
+++ b/Assignment 4/Assignment 4/Part 3- Assignment 4/index part3.html
@@ -1,7 +1,7 @@
 <!-- Name: Rohan Sah
     File:Assignment 4
     Date:2025/04/05
-    Description:  -->
+    Description: Bouncing Balls Animation -->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
