--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -1,7 +1,7 @@
 <!-- Name: Rohan Sah
     File:Assignment 5
     Date:2025/04/13
-    Description: silly story generator -->
+    Description: Wildlife themed webpage about bears with accessibility features, articles, multimedia, and interactive comments.-->
 <!DOCTYPE html>
 <html>
 <head>
